<resources>
    <string name="app_name">Carrinho de Mercado</string>
    <string name="add_produto_carrinho">Produto adicionado ao carrinho</string>
    <string name="ret_produto_carrinho">Produto retirado do carrinho</string>

    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <string name="msg_delecao_1">"Tem certeza que deseja retirar "</string>
    <string name="msg_delecao_2">" da lista?"</string>
    <string name="msg_produto_retirado">" foi retirado da lista."</string>
    <string name="msg_adicionar_produto">Você deve informar ao menos o nome do produto!</string>
    <string name="ok">Ok</string>
    <string name="x">x</string>
    <string name="operador_soma">+</string>
    <string name="tipo">Tipo :</string>
    <string name="preco">Preço :</string>
    <string name="deletar_produto">Deletar Produto</string>
    <string name="preco_produto">Preço Produto</string>
    <string name="quantidade_carrinho">Quantidade Carrinho</string>
    <string name="adicionar_produto">Adicionar Produto</string>
    <string name="gravar_preco">Gravar Preço</string>
    <string name="feira">Feira</string>
    <string name="bebidas">Bebidas</string>
    <string name="cereal">Cereal</string>
    <string name="carnes">Carnes</string>
    <string name="perfumaria">Perfumaria</string>
    <string name="limpeza">Limpeza</string>
    <string name="quantidade">Quantidade :</string>
    <string name="gravar_quantidade">Gravar Quantidade</string>
    <string name="frutas">Frutas</string>
    <string name="legumes">Legumes</string>
    <string name="verduras">Verduras</string>
</resources>
