<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:background="@drawable/shape_card_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_forever"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/lista_card_padding"
                    android:contentDescription="@string/deletar_produto"/>

                <Switch
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/deletar_produto"
                    android:switchMinWidth="80dp"
                    android:textOff="@string/x"
                    android:textOn="@string/operador_soma"
                    android:showText="true"
                    android:checked="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/produtoNome"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_color"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_card_bot">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/lista_card_padding">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/lista_card_padding"
                            android:text="@string/tipo"
                            android:textAllCaps="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/produtoTipo"
                            android:textAllCaps="true"
                            android:textSize="20sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/lista_card_padding"
                            android:text="@string/preco"
                            android:textAllCaps="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/produtoPreco"
                            android:layout_marginStart="@dimen/lista_card_padding"
                            android:textSize="25sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="49dp"
                            android:layout_height="50dp"
                            android:id="@+id/gravarPreco"
                            android:src="@drawable/ic_monetization_on_black"
                            android:contentDescription="@string/preco_produto"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleX="2.5"
                            android:scaleY="2.5"
                            android:id="@+id/marcarProduto"
                            style="@style/ProdutoCheckBox"/>

                    </LinearLayout>

                </LinearLayout>

            </TableRow>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>