<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="phillmonteiro.com.br.carrinhodemercado.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#c7c7c7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/botao_home"
                android:id="@+id/feira"
                android:background="#ff9100"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/feira"
                    android:drawablePadding="10dp"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"
                    android:text="@string/feira"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalFeira"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_cash_multiple_white"
                    android:drawablePadding="10dp"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                style="@style/botao_home"
                android:id="@+id/bebidas"
                android:background="#6bff63"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/bebida"
                    android:drawablePadding="10dp"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"
                    android:text="@string/bebidas"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalBebidas"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_cash_multiple_white"
                    android:drawablePadding="10dp"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/botao_home"
                android:id="@+id/cereais"
                android:orientation="vertical"
                android:background="#ffd791">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/cereal"
                    android:drawablePadding="10dp"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"
                    android:text="@string/cereal"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalCereais"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_cash_multiple_white"
                    android:drawablePadding="10dp"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                style="@style/botao_home"
                android:id="@+id/carnes"
                android:background="#ab0000"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/carne"
                    android:drawablePadding="10dp"
                    android:text="@string/carnes"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalCarnes"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_cash_multiple_white"
                    android:drawablePadding="10dp"
                    android:textColor="@color/primary_color"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

                <LinearLayout
                    style="@style/botao_home"
                    android:id="@+id/perfumaria"
                    android:orientation="vertical"
                    android:background="#f7a3ff">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/perfumaria"
                        android:drawablePadding="10dp"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold"
                        android:text="@string/perfumaria"
                        android:textAllCaps="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/totalPerfumaria"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:drawableLeft="@drawable/ic_cash_multiple_white"
                        android:drawablePadding="10dp"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/botao_home"
                    android:id="@+id/limpeza"
                    android:orientation="vertical"
                    android:background="#78b4fc">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/limpeza"
                        android:drawablePadding="10dp"
                        android:text="@string/limpeza"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold"
                        android:textAllCaps="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/totalLimpeza"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:drawableLeft="@drawable/ic_cash_multiple_white"
                        android:drawablePadding="10dp"
                        android:textColor="@color/primary_color"
                        android:textStyle="bold"/>

                </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
