<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout style="@style/HomeRow"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frutas"
            android:background="#1a345b"
            android:orientation="vertical"
            style="@style/botao_home">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/feira"
                android:drawablePadding="10dp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/frutas"
                android:textAllCaps="true"/>

            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalFrutas"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:drawableLeft="@drawable/ic_cash_multiple_white"
                android:drawablePadding="20dp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/legumes"
                android:background="#42597c"
                android:orientation="vertical"
                style="@style/botao_home">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/feira"
                android:drawablePadding="10dp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/legumes"
                android:textAllCaps="true"/>

            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalLegumes"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:drawableLeft="@drawable/ic_cash_multiple_white"
                android:drawablePadding="20dp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/verduras"
            android:background="#7a91b3"
            android:orientation="vertical"
            style="@style/botao_home">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/feira"
                android:drawablePadding="10dp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/verduras"
                android:textAllCaps="true"/>

            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalVerduras"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:drawableLeft="@drawable/ic_cash_multiple_white"
                android:drawablePadding="20dp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>